template.css
body {
    border: 0;
    margin: 0;
    padding: 0;
    font-family: sans-serif;
    background: #000;
    overflow-x: hidden;
}



header {
    position: relative;
    background: #666;
    padding-top: 15px;
    padding-left: 140px;
    height: auto;
    overflow: hidden;
}

#fullscreen 	{
			position:absolute;
			top:0px;
			left:0px;
			width:100%;
			height:100%;
			background:#000;
			z-index:10000;
			display:none;
		}
 
 #fsvidholder { 
    top: 5%;
    position: absolute;
    height: 90%;
 
 }


#xbox { position: absolute; top: 5px; right: 5px; color: white; cursor: pointer;}

#fsvid{ position:absolute; height: 100%; border: 1px solid #333;  
-webkit-transition: opacity 1s ease-in;
-moz-transition: opacity 1s ease-in;
-ms-transition: opacity 1s ease-in;
-o-transition: opacity 1s ease-in;
transition: opacity 1s ease-in;}  
opacity: 0;
.close{ top:0px; float:right; } 

#signin {
    display: none;
    position: absolute;
    top: 0;
    right: 0;
    padding: 5px;
    font-size: 9pt;
    color: #aaa;
    cursor: pointer;
}

footer {
    border-top: 1px solid #666;
    clear: both;
    position: relative;
    background: #666;
    font-size: 8pt;
    text-align: right;
    padding-right: 10px;
}

footer a:link, footer a:visited {
    color: white;
    text-decoration: none;
}

footer a:hover {
    color: orange;
}

#project {
    color: white;
    font-family: sans-serif;
    font-size: 48pt;
    font-weight: bold;
    text-shadow: 0 -1px 1px #000;
}

#tlinfo {
    color: #333;
    background: #ddd;
}

#timelines {
    width: 100%
}

.event {
    position: absolute;
    height: 25px;
    width: 3px;
    cursor: pointer;
}

.dot {
    position: absolute;
    height: 5px;
    width: 5px;
}

.beam {
    position: absolute;
    height: 25px;
    opacity: 0.3;
}

#videoswrapper {

    position: relative;
    width: 100%;
    padding-top: 30px;
    background: #aaa;
    min-height: 141px;
}

.pager {
    visibility: hidden;
    position: relative;
    background: #c8c8c8;
    width: 40px;
    height: 17px;
    color: #333;
    text-align: center;
    border-bottom: 1px solid #aaa;
    font-size: 13px;
    cursor: pointer;
}

.pagerAppear {
    position: relative;
    background: #c8c8c8;
    width: 40px;
    height: 17px;
    color: #333;
    text-align: center;
    border-bottom: 1px solid #aaa;
    font-size: 13px;
    cursor: pointer;
}

.pagerDisappear {
    visibility: hidden;
}

.vidline {
    position: relative;
    margin-bottom: 2px;
    height: 20px;
    width: 100%;
    background: #bbb;
}

.odd {
}

.even {
}

.vidnum {
    position: absolute;
    background: #c8c8c8;
    color: black;
    font-size: 20px;
    width: 40px;
    height: 20px;
    -o-transition: background 0.6s linear;
    -moz-transition: background 0.6s linear;
    -ms-transition: background 0.6s linear;
    -webkit-transition: background 0.6s linear;
    transition: background 0.6s linear;
    cursor: pointer;
    text-align: center;
}

.vidmeta {
    z-index: 99;
    position: absolute;
    left: 43px;
    opacity: 0;
    margin-left: 3px;
    background: #ddd;
    font-size: 7pt;
    line-height: 0.4em;
    text-align: center;
    float: left;
    width: 100px;
    -o-transition: opacity 0.1s linear;
    -moz-transition: opacity 0.1s linear;
    -webkit-transition: opacity 0.1s linear;
    -ms-transition: opacity 0.1s linear;
    transition: opacity 0.1s linear;
    cursor: default;
}

.timeline {
    position: absolute;
    left: 147px;
    right: 0;
    font-size: 18pt;
    height: 100%;
}

.vidtl {
    position: absolute;
    left: 147px;
    right: 0;
    font-size: 18pt;
    height: 100%;
    cursor: crosshair;
}

.vidmeta:hover {
    opacity: 1;
}

.vidactive {
    background: #0c0;
}

.vidtime {
    -webkit-transition: width 555ms linear;
    -moz-transition: width 555ms linear;
    -ms-transition: width 555ms linear;
    -o-transition: width 555ms linear;
    transition: width 555ms linear;
    position: relative;
    left: 450px;
    width: 30px;
    height: 100%;
    background: #ececec;
    z-index: 99;
}

#vselector {
    margin-left: 3px;
    background: #c8c8c8;
    width: 100%;
    height: 100%;
}

.baractive {
    right: 0;
    overflow: hidden;
}

#videos {
    position: relative;
    width: 100%;
    background: black;
    font-size: 9pt;
    color: #aaa;
    min-height: 600px;
}

.vidcontainer {
    margin-top: 15px;
    float: left;
    margin-left: 30px;
    margin-bottom: 15px;
    display: none;
    border: 4px solid #333;
}

.hor {
    width: 320px;
}

.vert {
    height: 320px;
}

.tbuttons {
  position: absolute;
  bottom: 3px;
  right: 3px;
}

.vidtools {
    position: relative;
    padding: 25px 5px 25px 5px;
    text-align: center;
}

#tlcontainer {
    position: relative;
    width: 100%;
    padding-top: 30px;
    background: #aaa;
}

.namebox {
    position: absolute;
    background: #c8c8c8;
    border-right: 3px solid #aaa;
    width: 145px;
    height: 25px;
    text-align: center;
}

.namebox #title {
    color: black;
    font-size: 18px;
    font-weight: 100;
    padding: 0;
    padding-top: 3px;
    letter-spacing: 2.5px;
}

.timeline {
    position: absolute;
    left: 147px;
    right: 0;
    font-size: 18pt;
    height: 100%;
}

#maintimeline {
    background: #666;
    height: 25px;
}

#navtl {
    height: 5px;
}

#timepos {
    margin-top: 18px;
    position: absolute;
    height: 0px;
    width: 3px;
    background: rgba(255,255,0,.5);
    z-index: 999;
}

#navbar {
    background: #eee;
    height: 5px;
    cursor: crosshair;
}

.controlbox {
    font-size: 8pt;
    background: #eee;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
    height: 18px;
    width: 140px;
}

#controls {
    padding-top: 3px;
    padding-left: 15px;
}

#controls .button {
    cursor: pointer;
    display: block;
    float: left;
    width: 16px;
}

#ready {
    cursor: pointer;
}

.button:hover, #ready:hover {
    color: green;
}

.button#play {
    display: none;
}

#videos {
    position: relative;
    width: 100%;
    margin-top: 30px;
    height: 100%;
}

#tweetPart {
    width: 100%;
    height: 100%;
    font-family: 'Fredoka One', cursive;
}

#videoTweets {
    display: none;
    position: relative;
    float: right;
    width: 25%;
    height: 500px;
    background-color: white;
    border: 10px solid;
    border-radius: 30px;
    -moz-border-radius: 30px;
    -webkit-border-radius: 30px;
    border-color: #00B2EE;
    font-family: 'Fredoka One', cursive;
}

#videoTweets .button {
    position: relative;
    width: 25%;
    height: 100%;
    font-family: 'Fredoka One', cursive;
    cursor: pointer;
}

#videoTweets .button:hover {
    color: #551033;
}

.showmeta {
display: none;
font-size: 18pt;
cursor: pointer;

}

#map_canvas{

width: 200px;
height: 200px;

}

#meta {

background: rgba(85,85,85,0.7);
-webkit-transition: all 0.5s linear;
-moz-transition: all 0.5s linear;
-ms-transition: all 0.5s linear;
-o-transition: all 0.5s linear;
transition: all 0.5s linear;
z-index: 9999;
position: fixed;
top: 150px;
width: 200px;
height: 400px;
right: -200px;
overflow: hidden;}
 

